--- a/styles.css
+++ b/styles.css
@@ -1718,7 +1718,7 @@ body.focus-outline-disabled :focus {
     margin-right: auto;
     box-sizing: border-box;
     position: relative;
-    border: 3px solid transparent; /* Placeholder border for border color change */
+    border: 3px solid transparent; /* Placeholder border to be replaced */
     transition: all 0.3s ease;
 }
 
